HelloUltraviolet/Fixtures/RejectedSource/Statements/DeferDiagnostic/Source/Main.uv
//! Rejected statement specimen for defer diagnostic coverage.

public procedure deferDiagnosticReference() -> i32 {
    defer {
        return 1
    }
    return 0
}
